# twitter_dm

./: .gitignore  CMakeLists.txt  README.md  bindings.cpp  example.cpp  library.cpp  library.h  pyproject.toml  setup.py  test_twitter_dm.cpp  twitter_dm.cpp  twitter_dm.h  update_pyproject.py
.github/workflows/: cmake-multi-platform.yml
test/: CMakeLists.txt  test_twitter_dm.cpp
twitter_dm/: __init__.py
